# rogue

./: .gitignore  OLLAMA_SETUP.md  README.md  compare_generators.py  pyproject.toml  run.py  spec.md  spec_claude_code_addendum.md  test_connectivity.py  test_dsl_generator.py  test_ollama_generator.py  test_suite.py
.claude/: settings.local.json
config/: generator.json  verifier.json
docs/: _config.yml  index.md  smart_positioning.md
docs/_layouts/: report.html
docs/_posts/: 2025-09-07-212106-map-generation-report.md  2025-09-07-map-generation-report.md  2025-09-08-071919-map-generation-report.md
examples/: smart_positioning_demo.py
scripts/: ascii_to_tmx.py  explore_npcs.py  generate_jekyll_posts.py  measure_tool_usage.py  render_tmx.py
src/cli/: main.py  report.py
src/generator/: dsl_generator.py  map_generator.py  ollama_tool_generator.py  positioning_system.py  smart_positioning_generator.py  tool_based_generator.py
src/shared/: connectivity.py  llm_client.py  models.py  utils.py
src/verifier/: map_verifier.py
tests/: test_pdf_report.py
tests/fixtures/prompts/: complex.txt  edge_cases.txt  simple.txt  test_suite.txt
