[tool.poetry]
name = "roguelike-testing"
version = "0.1.0"
description = "Roguelike map generation and verification system"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^2.0"
click = "^8.0"
rich = "^13.0"
structlog = "^23.0"
requests = "^2.31"
jsonschema = "^4.0"
anthropic = "^0.34.0"
pdfkit = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 88